# tpDcc-dccs-standalone

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
docs/sphinx/: index.rst
tests/: test_general.py
tpDcc/dccs/standalone/: __init__.py  __logging__.ini  __version__.py  _version.py  dcc.py
