[metadata]
name = tpDcc-dccs-standalone
description = Standalone implementation for tpDcc.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-dccs-standalone

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    PySide;python_version <= '3.4' and sys_platform == 'win32'
    PySide2;python_version > '3.4'  and sys_platform == 'win32'
    PySide;python_version < '2.7' and sys_platform == 'darwin'
    PySide2;python_version >= '2.7'  and sys_platform == 'darwin'
    tpDcc-libs-python
    tpDcc-core
    tpDcc-libs-qt

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpDcc/dccs/standalone/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =